Added some updates

--- a/.config/lsd/icons.yaml
+++ b/.config/lsd/icons.yaml
@@ -251,13 +251,6 @@ extension:
   toml                  : 
   bat                   : 
   mk                    : 
-  jpg                   : 
-  jpeg                  : 
-  bmp                   : 
-  png                   : 
-  webp                  : 
-  gif                   : 
-  ico                   : 
   twig                  : 
   cpp                   : 
   c++                   : 
@@ -275,14 +268,14 @@ extension:
   nix                   : 
   lua                   : 
   java                  : 
-  sh                    : 
-  fish                  : 
-  bash                  : 
-  zsh                   : 
-  ksh                   : 
-  csh                   : 
-  awk                   : 
-  ps1                   : 
+  sh                    : 
+  fish                  : 
+  bash                  : 
+  zsh                   : 
+  ksh                   : 
+  csh                   : 
+  awk                   : 
+  ps1                   : 
   ml                    : λ
   mli                   : λ
   diff                  : 
