--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -36,8 +36,8 @@ focus-exclude = [
   "class_g = 'Cairo-clock'"
 ];
 opacity-rule = [
- "90:class_g = 'Alacritty' && focused",
- "80:class_g = 'Alacritty' && !focused",
+ #"90:class_g = 'Alacritty' && focused",
+ #"80:class_g = 'Alacritty' && !focused",
  #"20:class_g = 'slop'"
 ]
 
