Added Python language config

--- a/.config/helix/languages.toml
+++ b/.config/helix/languages.toml
@@ -11,6 +11,12 @@ comment-token = "//"
 indent = { tab-width = 4, unit = "    " }
 
 [[language]]
+name = "Python"
+file-types = ["py"]
+comment-token = "#"
+indent = { tab-width = 4, unit = "    " }
+
+[[language]]
 name = "bash"
 file-types = ["sh", "bash", ".zshrc", "conf"]
 shebangs = ["sh", "bash"]
